--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,97 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
+  background-color: #00000088;
+  color: #fff;
   font-size: 16px;
+  font-family: monospace;
+}
+#app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: relative;
 }
 
-h1 {
-  color: #f60;
+#mainTextArea {
+  min-width: 99%;
+}
+
+#keyBoardContainer {
+  min-width: 99%;
+}
+
+@media (min-width: 500px) {
+  #mainTextArea {
+    min-width: 500px;
+  }
+}
+
+.row0 {
+  grid-template-columns: 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% auto;
+}
+.row1 {
+  grid-template-columns: auto 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 9%;
+}
+
+.row2 {
+  grid-template-columns: auto 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% auto;
+}
+
+.row3 {
+  grid-template-columns: auto 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% 6.5% auto;
+}
+
+.row4 {
+  grid-template-columns: 40%;
+  justify-content: center;
+}
+
+.keysRow {
+  display: grid;
+
+  .individualKeys {
+    cursor: pointer;
+    padding: 16px;
+    height: auto;
+    margin: 5px;
+    background-color: #fff;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    font-family: monospace;
+    $keyInactiveColor: grey;
+    .primary {
+      color: $keyInactiveColor;
+    }
+    .secondary {
+      color: $keyInactiveColor;
+      position: absolute;
+      top: 3px;
+      right: 6px;
+    }
+
+    .active {
+      color: #000;
+    }
+  }
+  .highLight {
+    background: #f00;
+  }
+
+  @media (max-width: 1000px) {
+    .individualKeys {
+      margin: 1px;
+      font-size: 10px;
+      padding: 10px;
+    }
+  }
 }
